feat: add applications presence connections and rooms
